[package]
name = "envhtp"
version = "1.0.0"
edition = "2021"
authors = ["Florian Neumann <florian.neumann@mindkeeper.solutions>"]
license = "MIT"
description = "Command line tool to convert env variables beginning with 'user_' to a htpasswd file."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bcrypt = "0.10.1"
base64 = "0.13.0"
clap = { version = "3.0.14", features = ["derive"] }